# traffic-simulator

./: .gitignore  CMakeLists.txt
UML_Diagrams/: Classes.drawio
include/: City.hpp  Road.hpp  Simulation.hpp  TrafficLight.hpp  Vehicle.hpp
include/Graphics/: Graphics.hpp
src/: City.cpp  Road.cpp  Simulation.cpp  TrafficLight.cpp  Vehicle.cpp  main.cpp
src/Graphics/: Graphics.cpp
